syntax = "proto3";

package aisabi.samples;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;

    oneof optional_nickname {
        string nickname = 2;
    }
    oneof optional_address {
        string address = 4;
    }
}

message HelloReply {
    string message = 1;
}
